--- a/javascript/formulario.html
+++ b/javascript/formulario.html
@@ -13,21 +13,14 @@
 
         <div class="mensagem"></div>
 
-        <form id="formulario-01">
-            <h2>Cálculo de média</h2>
-            <p>Preencha as notas de 0 a 10</p>
-            <input type="text" placeholder="digite um número" class="numero" name="n1">
-            <input type="text" placeholder="digite um número" class="numero" name="n2">
-            <input type="text" placeholder="digite um número" class="numero" name="n3">
-            <input type="text" placeholder="digite um número" class="numero" name="n4">
-            <button type="submit">Enviar</button>
-        </form>
-
         <form id="formulario-02">
             <h2>Faça seu cadastro</h2>
             <input type="text" placeholder="digite seu nome" class="obrigatorio" name="nome">
-            <input type="text" placeholder="digite seu email" class="obrigatorio" name="email">
+            <input type="text" placeholder="digite seu email" class="email" name="email">
             <input type="text" placeholder="digite seu telefone" class="" name="telefone">
+            <input type="text" placeholder="digite seu cep" class="numerico" name="cep">
+            <input type="text" placeholder="digite seu cidade" class="obrigario" name="cidade">
+            <input type="text" placeholder="digite seu uf" class="uf" name="uf"> 
             <button type="submit">Enviar</button>
         </form>
 
